# OnePacket

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
.workflow/: pipeline-20250324.yml
example/: cExample.c
include/: deserialize.h  packet.h  serialize.h
include/packets/: CustomControllerPacket.h  XenoMasterPacket.h  XenoSlavePacket.h
src/: CMakeLists.txt  DataLength.cpp  PacketBase.hpp  deserialize.cpp  error.h  packet.cpp  serialize.cpp
src/CustomFunction/: CustomControlPacketFunction.cpp  CustomControlPacketFunction.hpp  CustomFunction.cpp  CustomFunction.hpp  DJIReferee.cpp
src/CustomFunction/DJICRC/: DJICRC.c  DJICRC.h  DJICRC.hpp
src/include/: DataLength.hpp  OnePacketException.hpp  PacketBase.hpp
src/include/CustomFunction/: CustomControlPacketFunction.hpp  CustomFunction.hpp  DJIReferee.hpp
src/include/DJICRC/: DJICRC.c  DJICRC.h
test/: CustomControlPacket.c  XenoMasterPacket.c  XenoSlavePacket.c
